2003-12-06  Bruno Haible  <bruno@clisp.org>

	* hello-objc-gnustep/po/LocaleAliases: Add many new locales. Fix typo
	for EcuadorSpanish. Remove conflicting entries for Indonesian and
	Hebrew.

2003-12-06  Bruno Haible  <bruno@clisp.org>

	* hello-objc-gnustep/autoclean.sh: Also remove the *.lproj directories.
	* hello-objc-gnustep/po/GNUmakefile: Include the general rules at the
	beginning, not at the end, so that our .SUFFIXES tag has an effect.
	($(ENSTRINGSFILES)): Create the target directory.

2003-12-06  Bruno Haible  <bruno@clisp.org>

	* hello-*/INSTALL: Update the installation instructions.
	* hello-c++-qt/BUGS: New file.
	* hello-c++-kde/BUGS: New file.
	* hello-objc-gnustep/BUGS: New file.
	* hello-smalltalk/BUGS: New file.
	* hello-java-awt/BUGS: New file.
	* hello-java-swing/BUGS: New file.
	* Makefile.am (EXAMPLESFILES): Add them.

2003-12-02  Bruno Haible  <bruno@clisp.org>

	* examples/Makefile.am (EXTRA_DIST): Don't add the EXAMPLESFILES.
	(distdir1): New rule. Install the EXAMPLESFILES after 'update-po'.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* po/mmsmallpo.sh: Remove the POT-Creation-Date line from the generated
	PO file.
	* Makefile.am (EXAMPLESFILES): Add hello-pascal/hello.rst.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* hello-*/po/LINGUAS: Update.
	* Makefile.am (EXAMPLESFILES): Add the new message catalogs.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* po/es.po: New file, from Max de Mendizábal <max@upn.mx>.
	* po/LINGUAS: Add es.

2003-11-24  Bruno Haible  <bruno@clisp.org>

	* po/ca.po: New file, from Ivan Vilata i Balaguer <ivan@selidor.net>.
	* po/ro.po: New file, from Eugen Hoanca <eugenh@urban-grafx.ro>.
	* po/LINGUAS: Add ca, ro.

2003-11-22  Bruno Haible  <bruno@clisp.org>

	* po/ja.po: New file, from Masahito Yamaga <ma@yama-ga.com>.
	* po/LINGUAS: Add ja.

2003-11-20  Bruno Haible  <bruno@clisp.org>
