@@ -5,7 +5,7 @@ dnl
 dnl Configuration file - processed by autoconf.
 
 AC_INIT
-AC_CONFIG_SRCDIR(hello.pl)
+AC_CONFIG_SRCDIR(hello-1.pl.in)
 AM_INIT_AUTOMAKE(hello-perl, 0)
 
 dnl Check for availability of the Perl interpreter.
@@ -33,7 +33,8 @@ dnl Support for the po directory.
 AM_PO_SUBDIRS
 
 AC_CONFIG_FILES([Makefile])
-AC_CONFIG_FILES([hello:hello.pl], [chmod a+x hello])
+AC_CONFIG_FILES([hello-1:hello-1.pl.in], [chmod a+x hello-1])
+AC_CONFIG_FILES([hello-2:hello-2.pl.in], [chmod a+x hello-2])
 AC_CONFIG_FILES([m4/Makefile])
 AC_CONFIG_FILES([po/Makefile], [AM_POSTPROCESS_PO_MAKEFILE])
 AC_OUTPUT
