@@ -1,3 +1,14 @@
+2003-12-07  Bruno Haible  <bruno@clisp.org>
+
+	* hello-perl/hello-1.pl.in: Renamed from hello-perl/hello.pl. Make it
+	work.
+	* hello-perl/hello-2.pl.in: New file, from Guido Flohr.
+	* hello-perl/po/Makefile.am (POTFILES): Update.
+	(XGETTEXT_OPTIONS): Add options needed for the Locale::TextDomain API.
+	* hello-perl/configure.ac: Update accordingly.
+	* hello-perl/Makefile.am: Update accordingly.
+	* Makefile.am (EXAMPLESFILES): Update.
+
 2003-12-06  Bruno Haible  <bruno@clisp.org>
 
 	* hello-objc-gnustep/po/LocaleAliases: Add many new locales. Fix typo
